Série do Java passa a ter só as LTS, reescritas com fontes e diagramas
- Posts do Java 8, 11, 17, 21 e 25 reescritos: cada LTS reúne o que as
  versões intermediárias trouxeram, com a linha "Chegou em" por recurso,
  exemplos de código executados no JDK correspondente, diagramas e tabela
  completa de JEPs por versão, tudo com fontes oficiais
- Novo post "Java 29 (LTS) — Rumo à próxima LTS" com o que o 26 e o 27 trouxeram
- Posts das versões não LTS removidos; /posts/java-NN/ redireciona para a
  seção da versão dentro da LTS (src/data/java.ts + astro.config.mjs)
- Página /java/ redesenhada com as LTS e a próxima LTS
- Home troca "versões do Java" por "séries"; CLAUDE.md documenta o padrão

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>